--- a/HW_42/static_pvc.yaml
+++ b/HW_42/static_pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolume
 metadata:
   name: myapp
 spec:
-  capactiy:
+  capacity:
     storage: 5Gi
   volumeMode: Filesystem
   accessModes:
