--- a/HW_42/nginx.yaml
+++ b/HW_42/nginx.yaml
@@ -1,16 +1,24 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
+  name: myapp-pod
   labels:
     name: myapp
 spec:
+  volumes:
+    - name: myapp-pv-storage
+      persistentVolumeClaim:
+        claimName: myapp-pv-claim
   containers:
-  - name: my-nginx
+  - name: myapp-container
     image: nginx:latest
     resources:
       limits:
         memory: "128Mi"
         cpu: "500m"
     ports:
-      - containerPort: 80
+    - containerPort: 80
+      name: "http-server"
+    volumeMounts:
+    - mountPath: "/usr/share/nginx/html"
+      name: myapp-pv
