--- a/HW_42/static_pvc.yaml
+++ b/HW_42/static_pvc.yaml
@@ -2,11 +2,13 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: myapp-pv
+  labels:
+    type: myapp
 spec:
+  storageClassName: manual
   capacity:
     storage: 5Gi
-  volumeMode: Filesystem
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   hostPath:
     path: "/mnt/data"
